# MicroMediaParam

./: .gitignore  CLAUDE.md  Makefile  Makefile_separate_downloads.mk  README.md  UNMAPPED_ENHANCEMENT_REPORT.md  add_chebi_formulas.py  add_chebi_labels.py  add_missing_chebi_mappings.py  analyze_column_redundancy.py  analyze_extraction_quality.py  analyze_hydrated_compounds.py  analyze_missing_ingredients.py  chebi_fuzzy_matcher.py  check_improved_quality.py  chemical_properties.tsv  clean_base_compounds.py  clean_compound_concentrations.py  compounds_for_chebi_mapping.txt  create_final_nonredundant_mappings.py  create_media_summary.py  create_media_summary_new.py  create_nonredundant_mappings.py  enhance_unmapped_compounds.py  enhanced_extraction_performance.json  extract_all_compositions.py  extract_compositions_from_downloads.py  extract_non_chebi_compounds.py  extract_pure_chemicals.py  extraction_quality_analysis.json  find_real_mismatches.py  fix_hydrate_detection.py  fix_hydrated_compound_mappings.py  fix_mapping_issues.py  fix_medium_ids.py  fix_remaining_issues.py  fix_remaining_mismatches.py  fix_symbols_and_add_water_column.py  fix_utf8_symbols.py  force_fix_sigma_symbols.py  (+19 more)
media_compositions_final_results/: failed_files.txt
pipeline_output/db_mapping/: chemical_properties.tsv
pipeline_output/kg_mapping/: base_compounds_for_mapping.txt  clean_base_compounds_for_mapping.txt  composition_kg_mapping_final.tsv
pipeline_output/merge_mappings/: compound_id_mappings.tsv  unified_compound_mappings.tsv
src/analysis/: analyze_hydrated_ingredient_mappings.py
src/attic/: clean_final_dataset.py  clean_final_dataset_fixed.py  create_sample_media_data.py  download_and_annotate_metpo.py  enhance_ingredient_matching.py  enhanced_media_extractor.py  enhanced_pdf_downloader.py  filter_high_confidence_mappings.py  find_label_mismatches.py  fix_hydrate_issues.py  fix_hydrates_directly.py  fix_pubchem_memory_issue.py  (+7 more)
(+45 files in other folders)
