[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "micromediaparam"
version = "0.1.0"
description = "Tools for parsing and processing microbial growth media parameters"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.0",
    "beautifulsoup4>=4.13.0",
    "lxml>=6.0.0",
    "markitdown[pdf]>=0.1.2",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/micromediaparam"
Repository = "https://github.com/yourusername/micromediaparam"

[project.scripts]
parse-media-urls = "src.scripts.parse_media_urls:main"
download-media-pdfs = "src.scripts.download_media_pdfs:main"
convert-pdfs-to-text = "src.scripts.convert_pdfs_to_text:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true